samples/_failures_safe/1761716912_5e6ea7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_055646b0.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_055646b0.c:178:9: error: expected declaration or statement at end of input
  178 |         if (dist[i] == INT_MAX) {
      |         ^~
./samples/SAFE/__tmp_055646b0.c:178:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_055646b0.c:178:9: error: expected declaration or statement at end of input
